--- a/my-app/src/Car/Car.css
+++ b/my-app/src/Car/Car.css
@@ -4,6 +4,15 @@
     padding:10px;
     border-radius:5px;
     transition: border, box-shadow .3s;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, .25);
+;
+}
+.Car:hover {
+    border: 1px solid #aaa;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, .25);
+    cursor:pointer;
+
 }
 .input {}
 
